# markov

./: .gitignore  README  learn  run  terror.txt
src/: CMakeLists.txt  src.kdev4
src/.kdev4/: src.kdev4
src/common/: CMakeLists.txt  chain.cpp  chain.h  config.h  dictionary.cpp  dictionary.h  file.cpp  file.h  model.cpp  model.h  state.cpp  state.h  types.h
src/generate/: CMakeLists.txt  cli.cpp  cli.h  main.cpp  model.h
src/learn/: CMakeLists.txt  cli.cpp  cli.h  downloader.cpp  downloader.h  learn.cpp  learn.h  main.cpp  model.cpp  model.h  parser.cpp  parser.h
test/: simple
